--- a/wiki/fr/External_workbenches.html
+++ b/wiki/fr/External_workbenches.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">External workbenches/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-External+workbenches&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Externe Arbeitsbereiche (99% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Externe Arbeitsbereiche (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../External_workbenches.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="External workbenches (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/External_workbenches.html" class="mw-pt-progress mw-pt-progress--med" title="Bancos de trabajo externos (53% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../it/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Ambienti complementari (99% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/External_workbenches.html" class="mw-pt-progress mw-pt-progress--high" title="Zewn&#281;trzne &#347;rodowiska pracy (99% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><a href="../it/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Ambienti complementari (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../pl/External_workbenches.html" class="mw-pt-progress mw-pt-progress--complete" title="Zewn&#281;trzne &#347;rodowiska pracy (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="External workbenches (1% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Bancadas de trabalho externas (1% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ro/External_workbenches.html" class="mw-pt-progress mw-pt-progress--low" title="Ateliere Externe (1% translated)" lang="ro" dir="ltr">rom&acirc;n&#259;</a></li>
@@ -1178,16 +1178,15 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-</div></td></tr>
+</td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=FreecadRobustMCPBridge.svg&amp;filetimestamp=20260111060448&amp;.html" class="mw-file-description"><img src="../File/FreecadRobustMCPBridge.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
-<td><a href="../Robust_MCP_Bridge_Workbench.html" title="Robust MCP Bridge Workbench">Robust MCP Bridge</a>
+<td><a href="../fr/Robust_MCP_Bridge_Workbench.html" title="Robust MCP Bridge Workbench/fr">Robust MCP Bridge</a>
 </td>
-<td>Information and data
+<td>Informations et donn&eacute;es
 </td>
-<td>The Bridge workbench is designed to provide an interface between FreeCAD and the <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">Robust MCP Server</a> to enable AI assistants (like Claude) to control FreeCAD via the Model Context Protocol (MCP). It provides XML-RPC and JSON-RPC interfaces for external automation.
+<td>L'atelier Bridge est con&ccedil;u pour fournir une interface entre FreeCAD et le <a rel="nofollow" class="external text" href="https://pypi.org/project/freecad-robust-mcp/">serveur Robust MCP</a> afin de permettre aux assistants IA (comme Claude) de contr&ocirc;ler FreeCAD via le Model Context Protocol (MCP). Il fournit des interfaces XML-RPC et JSON-RPC pour l'automatisation externe.
 </td>
 <td>spkane
 </td>
@@ -1196,7 +1195,6 @@
 <td><span typeof="mw:File"><a href="../index.php?title=AddonManager.svg&amp;filetimestamp=20250123011258&amp;.html" class="mw-file-description"><img src="../File/AddonManager.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
 </td>
 <td>
-
 </td></tr>
 <tr>
 <td><span typeof="mw:File"><a href="../index.php?title=WebTools_workbench_icon.svg&amp;filetimestamp=20200208234602&amp;.html" class="mw-file-description"><img src="../File/WebTools_workbench_icon.svg" decoding="async" width="32" height="32" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
@@ -2076,33 +2074,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111212153
+Cached time: 20260112213909
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.336 seconds
-Real time usage: 0.428 seconds
-Preprocessor visited node count: 499/1000000
+CPU time usage: 0.335 seconds
+Real time usage: 0.459 seconds
+Preprocessor visited node count: 498/1000000
 Post&#8208;expand include size: 8135/2097152 bytes
 Template argument size: 2412/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2767/5000000 bytes
+Unstrip post&#8208;expand size: 2786/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.549      1 -total
- 25.80%    4.785      1 Template:Version/fr
- 24.00%    4.452      1 Template:Userdocnavi/fr
- 17.42%    3.231      2 Template:Docnav/fr
- 11.80%    2.188      1 Template:KEY
- 11.74%    2.177      1 Template:Navigation_menu_2
- 10.54%    1.955      1 Template:TOCright
-  6.46%    1.198      2 Template:FileName
+100.00%   11.606      1 -total
+ 32.63%    3.787      1 Template:Userdocnavi/fr
+ 20.97%    2.434      1 Template:Navigation_menu_2
+ 18.97%    2.202      2 Template:Docnav/fr
+ 12.41%    1.440      1 Template:TOCright
+ 11.01%    1.278      2 Template:FileName
+ 10.30%    1.195      1 Template:Version/fr
+  8.29%    0.962      1 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:73499-0!canonical and timestamp 20260111212153 and revision id 1736448. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:73499-0!canonical and timestamp 20260112213909 and revision id 1737745. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
