--- a/wiki/fr/FeaturePython_Custom_Properties.html
+++ b/wiki/fr/FeaturePython_Custom_Properties.html
@@ -25,10 +25,8 @@
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
 </pre></div>
-<div class="mw-translate-fuzzy">
-<p>Pour ajouter une propri&eacute;t&eacute; &agrave; cet objet, utilisez la forme longue de <code>addProperty</code> comme indiqu&eacute; ci-dessous. FreeCAD divisera automatiquement <code>ThePropertyName</code> et l'affichera avec des espaces (<code>The Property Name</code>) dans l'<a href="../fr/Property_editor.html#Vue_et_Propri.C3.A9t.C3.A9s_des_donn.C3.A9es" class="mw-redirect" title="Property editor/fr">Onglet Donn&eacute;es de la vue Propri&eacute;t&eacute;</a>.
+<p>Pour ajouter une propri&eacute;t&eacute; &agrave; cet objet, utilisez la forme longue de <code>addProperty</code> comme indiqu&eacute; ci-dessous. FreeCAD divisera automatiquement <code>ThePropertyName</code> et l'affichera avec des espaces (<code>The Property Name</code>) dans l'<a href="../fr/Property_View.html#Propri%C3%A9t%C3%A9s_Vue_et_Donn%C3%A9es" title="Property View/fr">onglet donn&eacute;es de la propri&eacute;t&eacute;s Vue</a>.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span><span class="o">.</span><span class="n">addProperty</span><span class="p">(</span><span class="s2">"App::PropertyBool"</span><span class="p">,</span> <span class="s2">"ThePropertyName"</span><span class="p">,</span> <span class="s2">"Subsection"</span><span class="p">,</span> <span class="s2">"Description for tooltip"</span><span class="p">)</span>
 </pre></div>
 <p><code>App::PropertyBool</code> est le type de la propri&eacute;t&eacute;. Les diff&eacute;rents types sont d&eacute;crits plus en d&eacute;tail ci-dessous.
@@ -1074,13 +1072,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112214135
+Cached time: 20260112214601
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.301 seconds
-Real time usage: 1.049 seconds
-Preprocessor visited node count: 2891/1000000
+CPU time usage: 0.332 seconds
+Real time usage: 0.463 seconds
+Preprocessor visited node count: 2890/1000000
 Post&#8208;expand include size: 23353/2097152 bytes
 Template argument size: 35604/2097152 bytes
 Highest expansion depth: 5/100
@@ -1090,17 +1088,17 @@ Unstrip post&#8208;expand size: 154090/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  757.035      1 -total
- 95.85%  725.641     95 Template:Code
-  0.66%    5.026      1 Template:Userdocnavi/fr
-  0.45%    3.429     42 Template:Incode
-  0.44%    3.317     43 Template:Version/fr
-  0.32%    2.419    234 Template:TODO
-  0.29%    2.200      1 Template:Navigation_menu_2
-  0.18%    1.397      1 Template:TOCright
+100.00%   71.599      1 -total
+ 51.62%   36.958     95 Template:Code
+  7.35%    5.266      1 Template:Userdocnavi/fr
+  4.77%    3.417     43 Template:Version/fr
+  3.90%    2.789     42 Template:Incode
+  3.58%    2.560      1 Template:Navigation_menu_2
+  3.21%    2.295    234 Template:TODO
+  2.72%    1.949      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214134 and revision id 1737749. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214601 and revision id 1737751. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
