--- a/wiki/fr/FeaturePython_Custom_Properties.html
+++ b/wiki/fr/FeaturePython_Custom_Properties.html
@@ -139,7 +139,7 @@
 <p><span style="font-size:small;"><a href="../fr/Release_notes_0.21.html" title="Release notes 0.21/fr">introduit dans la version 0.21</a></span>
 </p>
 <h2><span class="mw-headline" id="App::PropertyDistance">App::PropertyDistance</span></h2>
-<p>Une propri&eacute;t&eacute; de distance. Elle peut contenir une valeur <code>distance</code> positive, n&eacute;gative ou nulle. Utilisez le param&egrave;tre "Value" de la propri&eacute;t&eacute; pour obtenir la valeur sous forme de nombre flottant. La valeur est toujours en mm, mais dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, elle est pr&eacute;sent&eacute;e avec les unit&eacute;s des pr&eacute;f&eacute;rences. Pour plus de d&eacute;tails, voir la section <a href="#Creating">Cr&eacute;er un objet FeaturePython et lui ajouter une propri&eacute;t&eacute;</a>.
+<p>Une propri&eacute;t&eacute; de distance. Elle peut contenir une valeur <code>distance</code> positive, n&eacute;gative ou nulle. Utilisez le param&egrave;tre &laquo;&nbsp;Value&nbsp;&raquo; de la propri&eacute;t&eacute; pour obtenir la valeur sous forme de nombre flottant. La valeur est toujours en mm, mais dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, elle est pr&eacute;sent&eacute;e avec les unit&eacute;s des pr&eacute;f&eacute;rences. Pour plus de d&eacute;tails, voir la section <a href="#Creating">Cr&eacute;er un objet FeaturePython et lui ajouter une propri&eacute;t&eacute;</a>.
 </p><p><a href="#App::PropertyLength">App::PropertyLength</a> est une propri&eacute;t&eacute; similaire qui ne peut pas contenir de valeur n&eacute;gative.
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
@@ -338,11 +338,8 @@
 <p><span style="font-size:small;"><a href="../fr/Release_notes_0.21.html" title="Release notes 0.21/fr">introduit dans la version 0.21</a></span>
 </p>
 <h2><span class="mw-headline" id="App::PropertyLength">App::PropertyLength</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Une propri&eacute;t&eacute; de longueur. Elle peut contenir une valeur <code>length</code> positive ou nulle. Utilisez le param&egrave;tre "Value" de la propri&eacute;t&eacute; pour obtenir la valeur sous forme de nombre flottant. La valeur est toujours en mm mais dans l'<a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, elle est pr&eacute;sent&eacute;e avec les unit&eacute;s des pr&eacute;f&eacute;rences. Pour plus de d&eacute;tails, voir la section <a href="#Creating">Cr&eacute;ation d'un objet FeaturePython et ajout d'une propri&eacute;t&eacute; &agrave; celui-ci</a>.
-</p>
-</div>
-<p><a href="#App::PropertyDistance">App::PropertyDistance</a> est une propri&eacute;t&eacute; similaire qui peut aussi contenir une valeur n&eacute;gative.
+<p>Une propri&eacute;t&eacute; de longueur. Elle peut contenir une valeur <code>length</code> positive ou nulle. Utilisez le param&egrave;tre &laquo;&nbsp;Value&nbsp;&raquo; de la propri&eacute;t&eacute; pour obtenir la valeur sous forme de nombre flottant. La valeur est toujours en mm mais dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, elle est pr&eacute;sent&eacute;e avec les unit&eacute;s des pr&eacute;f&eacute;rences. Pour plus de d&eacute;tails, voir la section <a href="#Creating">Cr&eacute;ation d'un objet FeaturePython et ajout d'une propri&eacute;t&eacute; &agrave; celui-ci</a>.
+</p><p><a href="#App::PropertyDistance">App::PropertyDistance</a> est une propri&eacute;t&eacute; similaire qui peut aussi contenir une valeur n&eacute;gative.
 </p>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
@@ -1069,13 +1066,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112214618
+Cached time: 20260112214714
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.317 seconds
-Real time usage: 0.402 seconds
-Preprocessor visited node count: 2889/1000000
+CPU time usage: 0.303 seconds
+Real time usage: 0.366 seconds
+Preprocessor visited node count: 2888/1000000
 Post&#8208;expand include size: 23353/2097152 bytes
 Template argument size: 35604/2097152 bytes
 Highest expansion depth: 5/100
@@ -1085,17 +1082,17 @@ Unstrip post&#8208;expand size: 154090/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   78.421      1 -total
- 53.05%   41.604     95 Template:Code
-  9.89%    7.752      1 Template:Userdocnavi/fr
-  5.81%    4.555      1 Template:Navigation_menu_2
-  4.88%    3.830     43 Template:Version/fr
-  4.10%    3.215     42 Template:Incode
-  3.35%    2.629    234 Template:TODO
-  1.86%    1.461      1 Template:TOCright
+100.00%   59.990      1 -total
+ 54.93%   32.950     95 Template:Code
+  7.36%    4.417      1 Template:Userdocnavi/fr
+  3.99%    2.391     43 Template:Version/fr
+  3.74%    2.245      1 Template:Navigation_menu_2
+  3.65%    2.188    234 Template:TODO
+  3.45%    2.068     42 Template:Incode
+  1.48%    0.885      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214618 and revision id 1737753. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214714 and revision id 1737757. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
