--- a/wiki/fr/FeaturePython_Custom_Properties.html
+++ b/wiki/fr/FeaturePython_Custom_Properties.html
@@ -1,7 +1,7 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FeaturePython Custom Properties/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-FeaturePython+Custom+Properties&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
 <li><a href="../de/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--med" title="FeaturePython Benutzerdefinierte Eigenschaften (60% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FeaturePython_Custom_Properties.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FeaturePython Custom Properties (100% translated)" lang="en" dir="ltr">English</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
 <li><a href="../it/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="Propriet&agrave; personalizzate FeaturePython (1% translated)" lang="it" dir="ltr">italiano</a></li>
 <li><a href="../pl/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--complete" title="W&#322;a&#347;ciwo&#347;ci niestandardowe funkcji Python (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../ru/FeaturePython_Custom_Properties.html" class="mw-pt-progress mw-pt-progress--low" title="&#1057;&#1087;&#1080;&#1089;&#1086;&#1082; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074; FeaturePython (1% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
@@ -780,10 +780,8 @@
 <span class="n">obj</span><span class="o">.</span><span class="n">ThePropertyName</span> <span class="c1"># Vector (2.0, 4.0, 12.0)</span>
 </pre></div>
 <h2><span class="mw-headline" id="App::PropertyVectorDistance">App::PropertyVectorDistance</span></h2>
-<div class="mw-translate-fuzzy">
-<p>Une propri&eacute;t&eacute; vectorielle qui est presque identique &agrave; <a href="#App::PropertyVector">App::PropertyVector</a>. La seule diff&eacute;rence est que dans l'<a href="../fr/Property_editor.html" class="mw-redirect" title="Property editor/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, les param&egrave;tres "x", "y" et "z" de cette propri&eacute;t&eacute; sont pr&eacute;sent&eacute;s avec des unit&eacute;s des pr&eacute;f&eacute;rences. Mais en interne, toutes les valeurs sont sans unit&eacute; et donc en mm.
+<p>Une propri&eacute;t&eacute; vectorielle qui est presque identique &agrave; <a href="#App::PropertyVector">App::PropertyVector</a>. La seule diff&eacute;rence est que dans l'<a href="../fr/Property_View.html" title="Property View/fr">&eacute;diteur de propri&eacute;t&eacute;s</a>, les param&egrave;tres &laquo;&nbsp;x&nbsp;&raquo;, &laquo;&nbsp;y&nbsp;&raquo; et &laquo;&nbsp;z&nbsp;&raquo; de cette propri&eacute;t&eacute; sont pr&eacute;sent&eacute;s avec des unit&eacute;s des pr&eacute;f&eacute;rences. Mais en interne, toutes les valeurs sont sans unit&eacute; et donc en mm.
 </p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">obj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"App::FeaturePython"</span><span class="p">,</span> <span class="s2">"InternalObjectName"</span><span class="p">)</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">Label</span> <span class="o">=</span> <span class="s2">"User-friendly label"</span>
 <span class="n">obj</span><span class="o">.</span><span class="n">addProperty</span><span class="p">(</span><span class="s2">"App::PropertyVectorDistance"</span><span class="p">,</span> <span class="s2">"ThePropertyName"</span><span class="p">,</span> <span class="s2">"Subsection"</span><span class="p">,</span> <span class="s2">"Description for tooltip"</span><span class="p">)</span>
@@ -1066,33 +1064,33 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260112214714
+Cached time: 20260112214757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.310 seconds
-Real time usage: 0.357 seconds
-Preprocessor visited node count: 2888/1000000
+CPU time usage: 0.262 seconds
+Real time usage: 0.284 seconds
+Preprocessor visited node count: 2887/1000000
 Post&#8208;expand include size: 23353/2097152 bytes
 Template argument size: 35604/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 95/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 154090/5000000 bytes
+Unstrip post&#8208;expand size: 154094/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   82.363      1 -total
- 53.23%   43.844     95 Template:Code
-  6.26%    5.153      1 Template:Userdocnavi/fr
-  5.25%    4.323     43 Template:Version/fr
-  4.70%    3.871     42 Template:Incode
-  3.44%    2.834      1 Template:Navigation_menu_2
-  3.41%    2.808    234 Template:TODO
-  2.08%    1.711      1 Template:TOCright
+100.00%   49.971      1 -total
+ 51.01%   25.491     95 Template:Code
+  8.07%    4.031      1 Template:Userdocnavi/fr
+  5.30%    2.650     43 Template:Version/fr
+  4.22%    2.107      1 Template:Navigation_menu_2
+  4.05%    2.024     42 Template:Incode
+  3.31%    1.652    234 Template:TODO
+  2.50%    1.249      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214713 and revision id 1737757. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:174548-0!canonical and timestamp 20260112214757 and revision id 1737759. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
