--- a/wiki/fr/FreeCAD_and_DWG_Import.html
+++ b/wiki/fr/FreeCAD_and_DWG_Import.html
@@ -1,10 +1,10 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">FreeCAD and DWG Import/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-FreeCAD+and+DWG+Import&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD und DWG-Import (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD und DWG-Import (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../FreeCAD_and_DWG_Import.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="FreeCAD and DWG Import (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--med" title="Importaci&oacute;n de FreeCAD y DWG (42% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
-<li><a href="../it/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="Importare i file DWG in FreeCAD (98% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="../pl/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--high" title="FreeCAD i import DWG (98% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
+<li><a href="../it/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="Importare i file DWG in FreeCAD (100% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="../pl/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--complete" title="FreeCAD i import DWG (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--low" title="FreeCAD e Importa&ccedil;&atilde;o DWG (4% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../ru/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--low" title="FreeCAD &#1080; &#1080;&#1084;&#1087;&#1086;&#1088;&#1090; DWG (2% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ko/FreeCAD_and_DWG_Import.html" class="mw-pt-progress mw-pt-progress--med" title="FreeCAD &#50640;&#49436; DWG &#48520;&#47084;&#50724;&#44592; (29% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -69,10 +69,8 @@ make<span class="w"> </span>install<span class="w"> </span><span class="c1"># or
 <ul><li>page d'accueil&nbsp;: <a rel="nofollow" class="external text" href="https://qcad.org/en/qcad-command-line-tools#dwg2dwg">QCAD pro</a></li>
 <li>licence&nbsp;: commerciale</li>
 <li>optionnel, utilis&eacute; pour permettre l'importation et l'exportation de fichiers DWG</li></ul>
-<div class="mw-translate-fuzzy">
-<p>QCAD est une plateforme de CAO 2D open-source bien connue, bas&eacute;e sur le format DXF. Elle offre &eacute;galement une version pro payante, qui est essentiellement la version open-source plus le support du format DWG. En achetant la version pro, QCAD inclut &eacute;galement un utilitaire de conversion DWG vers DXF qui peut &ecirc;tre utilis&eacute; par FreeCAD.
+<p>QCAD Community Edition est une plateforme CAO 2D open source bas&eacute;e sur DXF tr&egrave;s connue. Elle propose &eacute;galement une version pro payante, qui est essentiellement la version open source avec en plus la prise en charge du format DWG et des fonctions de dessin. Lorsque vous achetez la version pro, QCAD inclut &eacute;galement un utilitaire de conversion DWG vers DXF qui peut &ecirc;tre utilis&eacute; par FreeCAD.
 </p>
-</div>
 <h4><span class="mw-headline" id="Installation_2">Installation</span></h4>
 <p>Si l'utilitaire n'est pas trouv&eacute; automatiquement par FreeCAD apr&egrave;s l'installation (<span style="font-size:small;"><a href="../fr/Release_notes_0.21.html" title="Release notes 0.21/fr">introduit dans la version 0.21</a></span>), vous devez d&eacute;finir manuellement le chemin d'acc&egrave;s au fichier bash (Linux et macOS) ou au fichier batch (Windows). Voir <a href="../fr/Import_Export_Preferences.html#DWG" title="Import Export Preferences/fr">Pr&eacute;f&eacute;rences Importer/Exporter</a>.
 </p><p><span id="CADExchanger_Workbench"></span>
@@ -141,34 +139,34 @@ make<span class="w"> </span>install<span class="w"> </span><span class="c1"># or
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210829
+Cached time: 20260112214856
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.099 seconds
-Preprocessor visited node count: 362/1000000
+CPU time usage: 0.058 seconds
+Real time usage: 0.090 seconds
+Preprocessor visited node count: 361/1000000
 Post&#8208;expand include size: 18369/2097152 bytes
 Template argument size: 7133/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3040/5000000 bytes
+Unstrip post&#8208;expand size: 3059/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.327      1 -total
- 25.26%    6.146      1 Template:Draft_Tools_navi/fr
- 19.74%    4.803      1 Template:Userdocnavi/fr
- 18.95%    4.609      2 Template:Navigation_menu_2
- 15.17%    3.690      1 Template:TOCright
- 13.51%    3.287      1 Template:Fake_heading
-  8.61%    2.095      2 Template:Code
-  7.94%    1.932      5 Template:Version/fr
-  5.43%    1.322      3 Template:Incode
+100.00%   18.532      1 -total
+ 39.02%    7.231      1 Template:Draft_Tools_navi/fr
+ 24.38%    4.519      2 Template:Navigation_menu_2
+ 14.90%    2.762      1 Template:Userdocnavi/fr
+ 12.77%    2.367      1 Template:Fake_heading
+  8.93%    1.655      2 Template:Code
+  6.80%    1.261      5 Template:Version/fr
+  6.55%    1.214      3 Template:Incode
+  5.90%    1.094      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:57016-0!canonical and timestamp 20260111210829 and revision id 1736352. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:57016-0!canonical and timestamp 20260112214856 and revision id 1737761. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
