--- a/wiki/fr/IfcOpenShell.html
+++ b/wiki/fr/IfcOpenShell.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">IfcOpenShell/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="fr" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-IfcOpenShell&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="../de/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--high" title="IfcOpenShell (98% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="../de/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--complete" title="IfcOpenShell (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><a href="../IfcOpenShell.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="IfcOpenShell (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../es/IfcOpenShell.html" class="mw-pt-progress mw-pt-progress--med" title="IfcOpenShell (41% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="fr" dir="ltr">fran&ccedil;ais</span></li>
@@ -17,10 +17,9 @@
 </pre></div>
 <h2><span class="mw-headline" id="Installation">Installation</span></h2>
 <p>IfcOpenShell peut &ecirc;tre install&eacute; de diff&eacute;rentes mani&egrave;res en fonction de votre syst&egrave;me d'exploitation et de votre environnement Python. Dans le pass&eacute;, IfcOpenShell &eacute;tait un peu difficile &agrave; installer car il devait &ecirc;tre compil&eacute; pour votre syst&egrave;me sp&eacute;cifique; Cependant, au moment d'&eacute;crire ces lignes (2020), il est plus facile de commencer &agrave; l'utiliser, car il est maintenant inclus avec FreeCAD dans de nombreuses distributions FreeCAD. En g&eacute;n&eacute;ral, il est conseill&eacute; d'utiliser l'une de ces distributions pr&eacute;compil&eacute;es et de ne la compiler vous-m&ecirc;me que si vous &ecirc;tes un utilisateur avanc&eacute;.
+</p><p><span id="From_IfcOpenShell"></span>
 </p>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="From_IfcOpenShell">From IfcOpenShell</span></h3>
-</div>
+<h3><span id=".C3.80_partir_d.27IfcOpenShell"></span><span class="mw-headline" id="&Agrave;_partir_d'IfcOpenShell">&Agrave; partir d'IfcOpenShell</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <p>IfcOpenShell install page: <a rel="nofollow" class="external free" href="https://docs.ifcopenshell.org/ifcopenshell-python/installation.html">https://docs.ifcopenshell.org/ifcopenshell-python/installation.html</a>
 </p>
@@ -391,34 +390,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213132
+Cached time: 20260112215000
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.133 seconds
-Real time usage: 0.196 seconds
+CPU time usage: 0.149 seconds
+Real time usage: 0.188 seconds
 Preprocessor visited node count: 1361/1000000
 Post&#8208;expand include size: 40613/2097152 bytes
 Template argument size: 19470/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 38/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 31721/5000000 bytes
+Unstrip post&#8208;expand size: 31726/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   45.217      1 -total
- 24.76%   11.195     38 Template:Code
- 24.10%   10.898      1 Template:BIM_Tools_navi/fr
- 21.78%    9.849      3 Template:Navigation_menu_2
- 15.38%    6.956      1 Template:FEM_Tools_navi/fr
-  9.99%    4.519      1 Template:Userdocnavi/fr
-  8.29%    3.747     57 Template:Incode
-  4.36%    1.971      1 Template:TOCright
-  2.54%    1.149      1 Template:Emphasis
+100.00%   48.043      1 -total
+ 26.91%   12.928     38 Template:Code
+ 19.91%    9.566      1 Template:BIM_Tools_navi/fr
+ 19.25%    9.247      3 Template:Navigation_menu_2
+ 14.12%    6.785      1 Template:FEM_Tools_navi/fr
+  9.94%    4.776     57 Template:Incode
+  6.04%    2.900      1 Template:Userdocnavi/fr
+  5.33%    2.560      1 Template:Emphasis
+  3.78%    1.815      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:185717-0!canonical and timestamp 20260111213132 and revision id 1736479. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:185717-0!canonical and timestamp 20260112215000 and revision id 1737763. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
